# namd-va-prediction

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
namd_replication/: config.py  interpretability.py
namd_replication/data/: encoder.py  loader.py  splitter.py
namd_replication/evaluation/: delong.py  metrics.py
namd_replication/models/: autogluon_model.py  xgboost_model.py
namd_replication/viz/: figures.py  tables.py
scripts/: 01_download_data.py  02_build_cohort.py  03_train_xgboost.py  04_train_autogluon.py  05_compare_models.py  06_interpret_models.py
