[project]
name = "namd-replication"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Kaan Karaman", email = "kaanrkaraman@gmail.com" },
    { name = "Dilara Cömert", email = "comerrtdilara@gmail.com" },
]

dependencies = [
    "numpy>=2.0,<3",    
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "shap>=0.45",
    "matplotlib>=3.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "requests>=2.32",
    "joblib>=1.4",
    "pyarrow>=17.0",
    "autogluon.tabular>=1.5,<2.0",
    "torch>=2.0,<3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=3.7",
    "pandas-stubs>=2.2",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["namd_replication"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["namd_replication", "scripts"]

[tool.ruff.lint.isort]
known-first-party = ["namd_replication"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "N",
    "RUF",
    "C4",
    "SIM",
]
ignore = [
    "E501",
    "N803",
    "N806",
    "B008",
    "RUF002",
    "RUF003",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["namd_replication"]
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "shap.*",
    "xgboost.*",
    "joblib.*",
    "matplotlib.*",
    "sklearn.*",
    "scipy.*",
    "autogluon.*",
    "torch.*",
]
ignore_missing_imports = true
